--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@ More  broadly,  the  study  towards robust and scalable    AI  could  make  a  s
 and induce more promising applications in, e.g., automated ML, meta-learning, privacy and security, hardware design, and big data analysis. I intend to  seek a new learning  frontier  when  the  current  learning  algorithms  become  infeasible, and formalize  foundations  of  secure  learning.</p>
 <p>Please refer to <a href="https://lsjxjtu.github.io/funding.html">Projects</a> for some research highlights.</p>
 <h2>News</h2>
+<p>* Grateful to receive the Best Paper Runner-Up Award at UAI’2022 in recognition of our work “<a href="https://arxiv.org/pdf/2206.06257.pdf">Distributed Adversarial Training to Robustify Deep Neural Networks at Scale</a>”.</p>
 <p>* <i>One</i> paper in <a href="https://www.auai.org/uai2022/">UAI’22</a> (Oral presentation).</p>
 <p>* <i>Five</i> papers in <a href="https://icml.cc/Conferences/2022/CallForPapers">ICML’22</a>: <a href="https://arxiv.org/pdf/2112.12376.pdf">Bi-level adversarial training</a>; <a href="https://arxiv.org/pdf/2206.04762.pdf">Winning lottery tickets from robust pretraining</a>; <a href="https://arxiv.org/pdf/2206.07839v1.pdf">Pruning helps certified robustness</a>; <a href="https://arxiv.org/pdf/2112.04468.pdf">Contrastive learning theory</a>; Generalization theory of GCN.</p>
 <p>* <i>One</i> paper in <a href="https://2022.naacl.org">NAACL&rsquo;22</a>.</p>
@@ -83,7 +84,7 @@ and induce more promising applications in, e.g., automated ML, meta-learning, pr
 <p>* Grateful to receive a <a href="https://beta.sam.gov/opp/f108cad02f824285af5ca85e1f7481f4/view">DARPA RED AIE Grant</a> as a Co-PI.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-06-18 06:52:54 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-08-04 16:25:46 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
