--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <td id="layout-menu">
 <div class="menu-category">Sijia</div>
 <div class="menu-item"><a href="index.html" class="current">Home</a></div>
-<div class="menu-item"><a href="links\CV_SL_2021.pdf">CV</a></div>
+<div class="menu-item"><a href="links\CV_Sijia_Liu_2022_2Pages.pdf">CV(2&nbsp;pages)</a></div>
 <div class="menu-category">Research</div>
 <div class="menu-item"><a href="publications.html">Publications</a></div>
 <div class="menu-item"><a href="funding.html">Projects</a></div>
@@ -85,7 +85,7 @@ and induce more promising applications in, e.g., automated ML, meta-learning, pr
 <p>* Grateful to receive a <a href="https://beta.sam.gov/opp/f108cad02f824285af5ca85e1f7481f4/view">DARPA RED AIE Grant</a> as a Co-PI.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-08-31 14:23:24 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-09-04 00:08:26 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
