--- a/group.html
+++ b/group.html
@@ -13,7 +13,7 @@
 <td id="layout-menu">
 <div class="menu-category">Sijia</div>
 <div class="menu-item"><a href="index.html">Home</a></div>
-<div class="menu-item"><a href="links\CV_SL_2021.pdf">CV</a></div>
+<div class="menu-item"><a href="links\CV_Sijia_Liu_2022_2Pages.pdf">CV(2&nbsp;pages)</a></div>
 <div class="menu-category">Research</div>
 <div class="menu-item"><a href="publications.html">Publications</a></div>
 <div class="menu-item"><a href="funding.html">Projects</a></div>
