--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@ More  broadly,  the  study  towards robust and scalable    AI  could  make  a  s
 and induce more promising applications in, e.g., automated ML, meta-learning, privacy and security, hardware design, and big data analysis. I intend to  seek a new learning  frontier  when  the  current  learning  algorithms  become  infeasible, and formalize  foundations  of  secure  learning.</p>
 <p>Please refer to <a href="https://lsjxjtu.github.io/funding.html">Projects</a> for some research highlights.</p>
 <h2>News</h2>
+<p>* <i>Two</i> papers in <a href="https://nips.cc">NeurIPS&rsquo;22</a>.</p>
 <p>* Grateful to receive a Robust Intelligence (RI) Core Small Grant Award from NSF as the PI.</p>
 <p>* Grateful to receive the Best Paper Runner-Up Award at UAI’2022 in recognition of our work “<a href="https://arxiv.org/pdf/2206.06257.pdf">Distributed Adversarial Training to Robustify Deep Neural Networks at Scale</a>”.</p>
 <p>* <i>One</i> paper in <a href="https://www.auai.org/uai2022/">UAI’22</a> (Oral presentation).</p>
@@ -85,7 +86,7 @@ and induce more promising applications in, e.g., automated ML, meta-learning, pr
 <p>* Grateful to receive a <a href="https://beta.sam.gov/opp/f108cad02f824285af5ca85e1f7481f4/view">DARPA RED AIE Grant</a> as a Co-PI.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-09-04 00:08:26 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-09-15 09:39:11 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
