--- a/publications.html
+++ b/publications.html
@@ -31,6 +31,10 @@
 <h2>Selected Conference Papers</h2>
 <p>* represents equal contribution</p>
 <ol>
+<li><p>G. Zhang, Y. Zhang, Y. Zhang, W. Fan, Q. Li, <b>S. Liu</b>, Shiyu Chang, <a href="https://arxiv.org/abs/2209.10222">Fairness Reprogramming</a>, <i>NeurIPS&rsquo;22</i></p>
+</li>
+<li><p>Y. Zhang, Y. Yao, P. Ram, P. Zhao, T. Chen, M. Hong, Y. Wang, <b>S. Liu</b>, Advancing Model Pruning via Bi-level Optimization, <i>NeurIPS&rsquo;22</i></p>
+</li>
 <li><p>G. Zhang*, S. Lu*, Y. Zhang, X. Chen, P.-Y. Chen, Q. Fan, L. Martie, L. Horesh, M. Hong, <b>S. Liu</b>, <a href="https://arxiv.org/pdf/2206.06257.pdf">Distributed Adversarial Training to Robustify Deep Neural Networks at Scale</a>, <i>38th Conference on Uncertainty in Artificial Intelligence (UAI)</i> <tt>(Oral, 5% acceptance rate)</tt></p>
 </li>
 <li><p>Y. Zhang*, G. Zhang*, P. Khanduri, M. Hong, S. Chang, <b>S. Liu</b>, <a href="https://arxiv.org/pdf/2112.12376.pdf">Revisiting and advancing fast adversarial training through the lens of bi-level optimization</a>, <i>ICML&rsquo;22</i></p>
