--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@ More  broadly,  the  study  towards robust and scalable    AI  could  make  a  s
 and induce more promising applications in, e.g., automated ML, meta-learning, privacy and security, hardware design, and big data analysis. I intend to  seek a new learning  frontier  when  the  current  learning  algorithms  become  infeasible, and formalize  foundations  of  secure  learning.</p>
 <p>Please refer to <a href="https://lsjxjtu.github.io/funding.html">Projects</a> for some research highlights.</p>
 <h2>News</h2>
-<p>* Tutorial on Bi-level Machine Learning will be given in <a href="https://aaai.org/Conferences/AAAI-23/aaai23tutorials/">AAAI&rsquo;23</a></p>
+<p>* Tutorial on <a href="https://sites.google.com/view/neurips2022-frfm-turotial/">Foundational Robustness of Foundation Models</a> will be given in NeurIPS&rsquo;22.</p>
+<p>* Tutorial on Bi-level Machine Learning will be given in <a href="https://aaai.org/Conferences/AAAI-23/aaai23tutorials/">AAAI&rsquo;23</a>.</p>
 <p>* <i>Two</i> papers in <a href="https://nips.cc">NeurIPS&rsquo;22</a>.</p>
 <p>* Grateful to receive a Robust Intelligence (RI) Core Small Grant Award from NSF as the PI.</p>
 <p>* Grateful to receive the Best Paper Runner-Up Award at UAI’2022 in recognition of our work “<a href="https://arxiv.org/pdf/2206.06257.pdf">Distributed Adversarial Training to Robustify Deep Neural Networks at Scale</a>”.</p>
@@ -87,7 +88,7 @@ and induce more promising applications in, e.g., automated ML, meta-learning, pr
 <p>* Grateful to receive a <a href="https://beta.sam.gov/opp/f108cad02f824285af5ca85e1f7481f4/view">DARPA RED AIE Grant</a> as a Co-PI.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-10-11 12:03:48 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-10-12 19:55:03 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
