--- a/index.html
+++ b/index.html
@@ -59,6 +59,59 @@ Thus, robustness and scalability  underscore my current and future research, and
 More  broadly,  the  study  towards robust and scalable    AI  could  make  a  significant  impact  on  machine learning theories, 
 and induce more promising applications in, e.g., automated ML, meta-learning, privacy and security, hardware design, and big data analysis. I intend to  seek a new learning  frontier  when  the  current  learning  algorithms  become  infeasible, and formalize  foundations  of  secure  learning.</p>
 <p>Please refer to <a href="https://lsjxjtu.github.io/funding.html">Projects</a> for some research highlights.</p>
+<h2>Representative Publications</h2>
+<ul>
+<li><p><b>Trustworthy AI</b> : Robustness, fairness, and model explanation</p>
+</li>
+</ul>
+<ol>
+<li><p><a href="https://arxiv.org/pdf/2112.12376.pdf">Revisiting and advancing fast adversarial training through the lens of bi-level optimization</a> <br /> 
+Y. Zhang*, G. Zhang*, P. Khanduri, M. Hong, S. Chang, <b>S. Liu</b> (* Equal contribution) <br /> 
+ICML’22</p>
+</li>
+<li><p><a href="https://openreview.net/pdf?id=gpp7cf0xdfN">Reverse Engineering of Imperceptible Adversarial Image Perturbations</a> <br /> 
+Y. Gong*, Y. Yao*, Y. Li, Y. Zhang, X. Liu, X. Lin, <b>S. Liu</b> <br /> 
+ICLR’22</p>
+</li>
+<li><p><a href="https://openreview.net/pdf?id=W9G_ImpHlQd">How to Robustify Black-Box ML Models? A Zeroth-Order Optimization Perspective</a><br />
+Y. Zhang, Y. Yao, J. Jia, J. Yi, M. Hong, S. Chang, <b>S. Liu</b><br />
+ICLR’22</p>
+</li>
+<li><p><a href="https://arxiv.org/pdf/2103.11882.pdf">Generating Adversarial Computer Programs using Optimized Obfuscations</a> <br />
+S. Srikant, <b>S. Liu</b>, T. Mitrovska, S. Chang, Q. Fan, G. Zhang, U.-M. O'Reilly <br />
+ICLR’21</p>
+</li>
+<li><p><a href="https://arxiv.org/pdf/2006.14748.pdf">Proper Network Interpretability Helps Adversarial Robustness in Classification</a> <br />
+A. Boopathy, <b>S. Liu</b>, G. Zhang, C. Liu, P.-Y. Chen, S. Chang, L. Daniel <br />
+ICML’20</p>
+</li>
+</ol>
+<ul>
+<li><p><b>Scalable AI</b> : Model compression, distributed learning,  black-box optimization, and automated ML <br /></p>
+</li>
+</ul>
+<ol>
+<li><p><a href="https://arxiv.org/pdf/2210.04092.pdf">Advancing Model Pruning via Bi-level Optimization</a> <br />
+Y. Zhang*, Y. Yao*, P. Ram, P. Zhao, T. Chen, M. Hong, Y. Wang, <b>S. Liu</b> <br />
+NeurIPS’22</p>
+</li>
+<li><p><a href="https://arxiv.org/pdf/2206.06257.pdf">Distributed Adversarial Training to Robustify Deep Neural Networks at Scale</a> <br />
+G. Zhang*, S. Lu*, Y. Zhang, X. Chen, P.-Y. Chen, Q. Fan, L. Martie, L. Horesh, M. Hong, <b>S. Liu</b> <br />
+UAI’22 (Best Paper Runner-Up Award)</p>
+</li>
+<li><p><a href="https://arxiv.org/pdf/1909.13806.pdf">Min-Max Optimization without Gradients: Convergence and Applications to Adversarial ML</a> <br />
+<b>S. Liu</b>, S. Lu, X. Chen, Y. Feng, K. Xu, A. Al-Dujaili, M. Hong, U.-M. O'Reilly <br />
+ICML’20</p>
+</li>
+<li><p><a href="https://arxiv.org/pdf/2006.06224.pdf">A Primer on Zeroth-Order Optimization in Signal Processing and Machine Learning</a> <br />
+<b>S. Liu</b>, P.-Y. Chen, B. Kailkhura, G. Zhang, A. O. Hero, P. K. Varshney <br />
+IEEE Signal Processing Magazine, 2020</p>
+</li>
+<li><p><a href="https://arxiv.org/pdf/1905.00424.pdf">An ADMM Based Framework for AutoML Pipeline Configuration</a> <br />
+<b>S. Liu</b>*, P. Ram*, D. Vijaykeerthy, D. Bouneffouf, G. Bramble, H. Samulowitz, D. Wang, A. Conn, A. Gray <br /> 
+AAAI’20</p>
+</li>
+</ol>
 <h2>News</h2>
 <p>* Grateful to be selected as a presenter of the AAAI 2023 New Faculty Highlight Program.</p>
 <p>* Tutorial on <a href="https://sites.google.com/view/neurips2022-frfm-turotial/">Foundational Robustness of Foundation Models</a> will be given in NeurIPS&rsquo;22.</p>
@@ -89,7 +142,7 @@ and induce more promising applications in, e.g., automated ML, meta-learning, pr
 <p>* Grateful to receive a <a href="https://beta.sam.gov/opp/f108cad02f824285af5ca85e1f7481f4/view">DARPA RED AIE Grant</a> as a Co-PI.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-11-22 12:23:57 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-11-30 14:14:15 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
