--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@ ICLR’22</p>
 Y. Zhang, Y. Yao, J. Jia, J. Yi, M. Hong, S. Chang, <b>S. Liu</b><br />
 ICLR’22</p>
 </li>
-<li><p><a href="https://arxiv.org/pdf/2103.11882.pdf">Generating Adversarial Computer Programs using Optimized Obfuscations</a> <br />
-S. Srikant, <b>S. Liu</b>, T. Mitrovska, S. Chang, Q. Fan, G. Zhang, U.-M. O'Reilly <br />
-ICLR’21</p>
+<li><p><a href="https://arxiv.org/pdf/2209.10222.pdf">Fairness reprogramming</a> <br />
+G. Zhang*, Y. Zhang*, Y. Zhang, W. Fan, Q. Li, S. Liu, S. Chang <br />
+NeurIPS&rsquo;22</p>
 </li>
 <li><p><a href="https://arxiv.org/pdf/2006.14748.pdf">Proper Network Interpretability Helps Adversarial Robustness in Classification</a> <br />
 A. Boopathy, <b>S. Liu</b>, G. Zhang, C. Liu, P.-Y. Chen, S. Chang, L. Daniel <br />
@@ -142,7 +142,7 @@ AAAI’20</p>
 <p>* Grateful to receive a <a href="https://beta.sam.gov/opp/f108cad02f824285af5ca85e1f7481f4/view">DARPA RED AIE Grant</a> as a Co-PI.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-11-30 14:14:15 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-12-04 14:16:29 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
