--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@ AAAI’20</p>
 </li>
 </ol>
 <h2>News</h2>
+<p>* One paper in <a href="https://saner2023.must.edu.mo/">SANER 2023</a>: <a href="https://arxiv.org/abs/2211.11711">Towards Both Robust and Accurate Code Models</a>; Equally contributed by Jinghan Jia (MSU) and Shashank Srikant (MIT).</p>
 <p>* Grateful to be selected as a presenter of the AAAI 2023 New Faculty Highlight Program.</p>
 <p>* Tutorial on <a href="https://sites.google.com/view/neurips2022-frfm-turotial/">Foundational Robustness of Foundation Models</a> will be given in NeurIPS&rsquo;22.</p>
 <p>* Tutorial on Bi-level Machine Learning will be given in <a href="https://aaai.org/Conferences/AAAI-23/aaai23tutorials/">AAAI&rsquo;23</a>.</p>
@@ -142,7 +143,7 @@ AAAI’20</p>
 <p>* Grateful to receive a <a href="https://beta.sam.gov/opp/f108cad02f824285af5ca85e1f7481f4/view">DARPA RED AIE Grant</a> as a Co-PI.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-12-04 14:30:36 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-12-17 07:36:00 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
