--- a/publications.html
+++ b/publications.html
@@ -31,6 +31,8 @@
 <h2>Selected Conference Papers</h2>
 <p>* represents equal contribution</p>
 <ol>
+<li><p>Y. Zhang*, A.K. Kamath*, Q. Wu*, Z. Fan*, W. Chen, Z. Wang, S. Chang, S. Liu, C. Hao, <a href="https://arxiv.org/abs/2210.08578">Data-Model-Circuit Tri-Design for Ultra-Light Video Intelligence on Edge Devices</a>, <i>ASP-DAC&rsquo;23</i></p>
+</li>
 <li><p>J. Jia, S. Srikant, T. Mitrovska, C. Gan, S. Chang, <b>S. Liu</b>, U.-M. O'Reilly, <a href="https://arxiv.org/abs/2211.11711">CLAWSAT: Towards Both Robust and Accurate Code Models</a>, <i>the 30th IEEE International Conference on Software Analysis, Evolution and Reengineering (SANER 2023)</i></p>
 </li>
 <li><p>G. Zhang*, Y. Zhang*, Y. Zhang, W. Fan, Q. Li, <b>S. Liu</b>, Shiyu Chang, <a href="https://arxiv.org/abs/2209.10222">Fairness Reprogramming</a>, <i>NeurIPS&rsquo;22</i></p>
