--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@ AAAI’20</p>
 </li>
 </ol>
 <h2>News</h2>
+<p>* <i>Four</i> papers in <a href="https://iclr.cc/Conferences/2023/Dates">ICLR&rsquo;23</a>: <a href="https://openreview.net/pdf?id=MjsDeTcDEy">Issues and Fixes in IRM</a>, <a href="https://openreview.net/pdf?id=5tKXUZil3X">TextGrad: Differentiable Solution to NLP Attack Generation</a>, <a href="https://openreview.net/pdf?id=4UldFtZ_CVF">Provable Benefits of Sparse GNN</a>, <a href="https://openreview.net/pdf?id=jClGv3Qjhb">Sample Complexity Analysis of ViT</a></p>
 <p>* <i>One</i> paper in <a href="https://www.aspdac.com/aspdac2023/">ASP-DAC&rsquo;23</a>.</p>
 <p>* <i>One</i> paper in <a href="https://saner2023.must.edu.mo/">SANER 2023</a>: <a href="https://arxiv.org/abs/2211.11711">Towards Both Robust and Accurate Code Models</a>; Equally contributed by Jinghan Jia (MSU) and Shashank Srikant (MIT).</p>
 <p>* Grateful to be selected as a presenter of the AAAI 2023 New Faculty Highlight Program.</p>
@@ -144,7 +145,7 @@ AAAI’20</p>
 <p>* Grateful to receive a <a href="https://beta.sam.gov/opp/f108cad02f824285af5ca85e1f7481f4/view">DARPA RED AIE Grant</a> as a Co-PI.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-12-17 15:50:09 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-01-20 22:07:30 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
