--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@ AAAI’20</p>
 </li>
 </ol>
 <h2>News</h2>
+<p>* <i>Two</i> papers in <a href="https://cvpr2023.thecvf.com">CVPR&rsquo;23</a>.</p>
 <p>* <i>Three</i> papers in <a href="https://2023.ieeeicassp.org">ICASSP&rsquo;23</a>.</p>
 <p>* <b>CVPR&rsquo;23 tutorial</b> on <i>Reverse Engineering of Deception: Foundations and Applications</i> is accepted and will be given with Xiaoming Liu (MSU) and Xue Lin (Northeastern).</p>
 <p>* AAAI&rsquo;23 tutorial on Bi-level Optimization in ML:  Foundations and Applications is now available at <a href="https://sites.google.com/view/aaai2023tutorial/home">link</a>.</p>
@@ -148,7 +149,7 @@ AAAI’20</p>
 <p>* Grateful to receive a <a href="https://beta.sam.gov/opp/f108cad02f824285af5ca85e1f7481f4/view">DARPA RED AIE Grant</a> as a Co-PI.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-02-16 22:06:10 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-02-28 13:03:30 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
