--- a/index.html
+++ b/index.html
@@ -113,9 +113,10 @@ AAAI’20</p>
 </li>
 </ol>
 <h2>News</h2>
+<p>* Grateful to receive a grant from DSO National Laboratories.</p>
 <p>* <i>Two</i> papers in <a href="https://cvpr2023.thecvf.com">CVPR&rsquo;23</a>.</p>
 <p>* <i>Three</i> papers in <a href="https://2023.ieeeicassp.org">ICASSP&rsquo;23</a>.</p>
-<p>* <b>CVPR&rsquo;23 tutorial</b> on <i>Reverse Engineering of Deception: Foundations and Applications</i> is accepted and will be given with Xiaoming Liu (MSU) and Xue Lin (Northeastern).</p>
+<p>* CVPR&rsquo;23 tutorial on <i>Reverse Engineering of Deception: Foundations and Applications</i> is accepted and will be given with Xiaoming Liu (MSU) and Xue Lin (Northeastern).</p>
 <p>* AAAI&rsquo;23 tutorial on Bi-level Optimization in ML:  Foundations and Applications is now available at <a href="https://sites.google.com/view/aaai2023tutorial/home">link</a>.</p>
 <p>* <i>Four</i> papers in <a href="https://iclr.cc/Conferences/2023/Dates">ICLR&rsquo;23</a>: <a href="https://openreview.net/pdf?id=MjsDeTcDEy">Issues and Fixes in IRM</a>, <a href="https://openreview.net/pdf?id=5tKXUZil3X">TextGrad: Differentiable Solution to NLP Attack Generation</a>, <a href="https://openreview.net/pdf?id=4UldFtZ_CVF">Provable Benefits of Sparse GNN</a>, <a href="https://openreview.net/pdf?id=jClGv3Qjhb">Sample Complexity Analysis of ViT</a>.</p>
 <p>* <i>One</i> paper in <a href="https://www.aspdac.com/aspdac2023/">ASP-DAC&rsquo;23</a>.</p>
@@ -149,7 +150,7 @@ AAAI’20</p>
 <p>* Grateful to receive a <a href="https://beta.sam.gov/opp/f108cad02f824285af5ca85e1f7481f4/view">DARPA RED AIE Grant</a> as a Co-PI.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-02-28 13:03:30 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-03-01 21:58:11 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
