--- a/funding.html
+++ b/funding.html
@@ -121,7 +121,7 @@
 </li>
 </ol>
 <h1>Research Support</h1>
-<p>I am very grateful to receive the support from <a href="https://mitibmwatsonailab.mit.edu">MIT-IBM Watson AI Lab</a>, <a href="https://beta.sam.gov/opp/f108cad02f824285af5ca85e1f7481f4/view">DARPA</a>, <a href="https://research.cisco.com">Cisco Research</a>, and <a href="https://www.dso.org.sg/">DSO</a>.</p>
+<p>I am very grateful to receive the support from <a href="https://mitibmwatsonailab.mit.edu">MIT-IBM Watson AI Lab</a>, <a href="https://beta.sam.gov/opp/f108cad02f824285af5ca85e1f7481f4/view">DARPA</a>, <a href="https://research.cisco.com">Cisco Research</a>, <a href="https://www.nsf.gov">NSF</a>, and <a href="https://www.dso.org.sg/">DSO</a>.</p>
 <table class="imgtable"><tr><td>
 <img src="images/support_update.png" alt="90" width="525px" />&nbsp;</td>
 <td align="left"></td></tr></table>
