--- a/publications.html
+++ b/publications.html
@@ -31,6 +31,18 @@
 <h2>Selected Conference Papers</h2>
 <p>* represents equal contribution</p>
 <ol>
+<li><p>A. Chen, Y. Yao, P.-Y. Chen, Y. Zhang, <b>S. Liu</b>, <a href="https://arxiv.org/abs/2211.11635">Understanding and Improving Visual Prompting: A Label-Mapping Perspective</a>, <i>CVPR&rsquo;23</i></p>
+</li>
+<li><p>Y. Zhang, X. Chen, J. Jia, <b>S. Liu</b>, <a href="https://openreview.net/forum?id=ximJfjVxda">Text-Visual Prompting for Efficient 2D Temporal Video Grounding</a>, <i>CVPR&rsquo;23</i></p>
+</li>
+<li><p>Y. Zhang, P. Sharma, P. Ram, M. Hong, K.R. Varshney, <b>S. Liu</b>, <a href="https://openreview.net/forum?id=MjsDeTcDEy">What Is Missing in IRM Training and Evaluation? Challenges and Solutions</a>, <i>ICLR&rsquo;23</i></p>
+</li>
+<li><p>S. Zhang, M. Wang, P.-Y. Chen, <b>S. Liu</b>, S. Lu, M. Liu, <a href="https://openreview.net/forum?id=4UldFtZ_CVF">Joint Edge-Model Sparse Learning is Provably Efficient for Graph Neural Networks</a>, <i>ICLR&rsquo;23</i></p>
+</li>
+<li><p>H. Li, M. Wang, <b>S. Liu</b>, P.-Y. Chen, <a href="https://openreview.net/forum?id=jClGv3Qjhb">A Theoretical Understanding of Shallow Vision Transformers: Learning, Generalization, and Sample Complexity</a>, <i>ICLR&rsquo;23</i></p>
+</li>
+<li><p>B. Hou, J. Jia, Y. Zhang, G. Zhang, Y. Zhang, <b>S. Liu</b>, S. Chang, <a href="https://openreview.net/forum?id=5tKXUZil3X">TextGrad: Advancing Robustness Evaluation in NLP by Gradient-Driven Optimization</a>, <i>ICLR&rsquo;23</i></p>
+</li>
 <li><p>Y. Zhang*, A.K. Kamath*, Q. Wu*, Z. Fan*, W. Chen, Z. Wang, S. Chang, <b>S. Liu</b>, C. Hao, <a href="https://arxiv.org/abs/2210.08578">Data-Model-Circuit Tri-Design for Ultra-Light Video Intelligence on Edge Devices</a>, <i>ASP-DAC&rsquo;23</i></p>
 </li>
 <li><p>J. Jia, S. Srikant, T. Mitrovska, C. Gan, S. Chang, <b>S. Liu</b>, U.-M. O'Reilly, <a href="https://arxiv.org/abs/2211.11711">CLAWSAT: Towards Both Robust and Accurate Code Models</a>, <i>the 30th IEEE International Conference on Software Analysis, Evolution and Reengineering (SANER 2023)</i></p>
