--- a/index.html
+++ b/index.html
@@ -43,22 +43,24 @@ Twitter: @sijialiu17 <br />
 Interested candidates are strongly encouraged to contact me by <a href="mailto:liusiji5@msu.edu">email</a>, together with resume and transcripts.</p>
 </div></div>
 <h2>Short Bio</h2>
-<p>Sijia Liu received the Ph.D. degree (with All-University Doctoral Prize) in Electrical and Computer Engineering from Syracuse University, NY, USA, in 2016. He was a Postdoctoral Research Fellow at the University of Michigan, Ann Arbor, in 2016-2017, 
-and a Research Staff Member at the MIT-IBM Watson AI Lab in 2018-2020. His research interests include scalable and 
-trustworthy AI, e.g., adversarial deep learning, optimization theory and methods, computer vision, and computational biology. 
-He received the Best Student Paper Award at the 42nd IEEE International Conference on Acoustics, Speech and Signal Processing
-(ICASSP). His work has been published at top-tier ML/CV conferences such as NeurIPS, ICML, ICLR, CVPR, ICCV, ECCV, AISTATS, AAAI, 
-and IJCAI.</p>
+<p>Sijia Liu received the Ph.D. degree (with All-University Doctoral Prize) in Electrical and Computer Engineering from Syracuse University, NY, USA, in 2016. 
+He was a Postdoctoral Research Fellow at the University of Michigan, Ann Arbor, in 2016-2017, and a Research Staff Member at the MIT-IBM Watson AI Lab in 2018-2020. 
+His research interests include scalable and trustworthy AI, e.g., adversarial deep learning, optimization theory and methods, computer vision, and computational biology. 
+He received the Best Student Paper Award at the 42nd IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP’16), and the Best Paper Runner Award at the 38th Conference on Uncertainty in Artificial Intelligence (UAI’22). 
+He has published over 50 papers at top-tier ML/CV conferences, such as NeurIPS, ICML, ICLR, CVPR, ICCV, ECCV, AISTATS, and AAAI (please refer to the CS ranking). </p>
+<p>He is currently a Senior Member of IEEE, a Technical Committee (TC) Member of Machine Learning for Signal Processing (MLSP) in the IEEE’s Signal Processing Society, and an affiliated faculty at the MIT-IBM Watson AI Lab, IBM Research. He has organized a series of Adversarial ML workshops in ICML&rsquo;22 and  KDD&rsquo;19-&rsquo;22, and provided tutorials on Trustworthy and Scalable ML  in AAAI&rsquo;23, NeurIPS&rsquo;22, and CVPR&rsquo;20. </p>
 <h2>Research Interests</h2>
 <p>My research spans the areas of machine learning (ML)/deep learning (DL), optimization, computer vision, security, signal processing and data science, 
 with a focus on developing learning algorithms and theory, and robust and explainable artificial intelligence (AI). 
 These research themes provide a solid foundation for reaching my <b>long-term research objective: Making AI systems safe and scalable</b>. 
 As AI moves from the lab into the real world (e.g., autonomous vehicles), ensuring its safety becomes a paramount requirement prior to 
-its deployment. Moreover, as datasets, ML/DL models, and learning tasks become increasingly complex, getting ML/DL to scale calls for new advances in learning algorithm design.
+its deployment. Moreover, as datasets, ML/DL models, and learning tasks become increasingly complex, 
+getting ML/DL to scale calls for new advances in learning algorithm design.
 Thus, robustness and scalability  underscore my current and future research, and of course, these two goals are intertwined.  
-More  broadly,  the  study  towards robust and scalable    AI  could  make  a  significant  impact  on  machine learning theories, 
-and induce more promising applications in, e.g., automated ML, meta-learning, privacy and security, hardware design, and big data analysis. I intend to  seek a new learning  frontier  when  the  current  learning  algorithms  become  infeasible, and formalize  foundations  of  secure  learning.</p>
-<p>Please refer to <a href="https://lsjxjtu.github.io/funding.html">Projects</a> for some research highlights.</p>
+More  broadly,  the  study  towards robust and scalable AI could make a significant impact on machine learning theories, 
+and induce more promising applications in, e.g., automated ML, meta-learning, privacy and security, hardware design, and big data analysis. 
+I intend to seek a new learning frontier when the current learning algorithms become infeasible, and formalize  foundations  of  secure  learning.</p>
+<p>Please refer to <a href="https://lsjxjtu.github.io/funding.html">Projects</a> and our <a href="https://www.optml-group.com/posts">OPTML</a> group for some research highlights.</p>
 <h2>Representative Publications</h2>
 <ul>
 <li><p><b>Trustworthy AI</b> : Robustness, fairness, and model explanation</p>
@@ -150,7 +152,7 @@ AAAI’20</p>
 <p>* Grateful to receive a <a href="https://beta.sam.gov/opp/f108cad02f824285af5ca85e1f7481f4/view">DARPA RED AIE Grant</a> as a Co-PI.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-03-01 21:58:11 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-03-16 14:04:57 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
