--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ Interested candidates are strongly encouraged to contact me by <a href="mailto:l
 He was a Postdoctoral Research Fellow at the University of Michigan, Ann Arbor, in 2016-2017, and a Research Staff Member at the MIT-IBM Watson AI Lab in 2018-2020. 
 His research interests include scalable and trustworthy AI, e.g., adversarial deep learning, optimization theory and methods, computer vision, and computational biology. 
 He received the Best Student Paper Award at the 42nd IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP’16), and the Best Paper Runner Award at the 38th Conference on Uncertainty in Artificial Intelligence (UAI’22). 
-He has published over 50 papers at top-tier ML/CV conferences, such as NeurIPS, ICML, ICLR, CVPR, ICCV, ECCV, AISTATS, and AAAI (please refer to the CS ranking). </p>
+He has published over 50 papers at top-tier ML/CV conferences, such as NeurIPS, ICML, ICLR, CVPR, ICCV, ECCV, AISTATS, and AAAI (please refer to the <a href="https://csrankings.org">CS ranking</a>). </p>
 <p>He is currently a Senior Member of IEEE, a Technical Committee (TC) Member of Machine Learning for Signal Processing (MLSP) in the IEEE’s Signal Processing Society, and an affiliated faculty at the MIT-IBM Watson AI Lab, IBM Research. He has organized a series of Adversarial ML workshops in ICML&rsquo;22 and  KDD&rsquo;19-&rsquo;22, and provided tutorials on Trustworthy and Scalable ML  in AAAI&rsquo;23, NeurIPS&rsquo;22, and CVPR&rsquo;20. </p>
 <h2>Research Interests</h2>
 <p>My research spans the areas of machine learning (ML)/deep learning (DL), optimization, computer vision, security, signal processing and data science, 
@@ -152,7 +152,7 @@ AAAI’20</p>
 <p>* Grateful to receive a <a href="https://beta.sam.gov/opp/f108cad02f824285af5ca85e1f7481f4/view">DARPA RED AIE Grant</a> as a Co-PI.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-03-16 14:04:57 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-03-16 14:14:17 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
