--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@ AAAI’20</p>
 </li>
 </ol>
 <h2>News</h2>
+<p>* The 2nd Workshop on <a href="https://advml-frontier.github.io/">New Frontiers in Adversarial Machine Learning</a> has been accepted by <b>ICML&rsquo;23</b>.</p>
 <p>* Grateful to receive a grant from DSO National Laboratories.</p>
 <p>* <i>Two</i> papers in <a href="https://cvpr2023.thecvf.com">CVPR&rsquo;23</a>.</p>
 <p>* <i>Three</i> papers in <a href="https://2023.ieeeicassp.org">ICASSP&rsquo;23</a>.</p>
@@ -152,7 +153,7 @@ AAAI’20</p>
 <p>* Grateful to receive a <a href="https://beta.sam.gov/opp/f108cad02f824285af5ca85e1f7481f4/view">DARPA RED AIE Grant</a> as a Co-PI.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-03-16 14:16:18 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-03-16 22:44:42 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
