--- a/funding.html
+++ b/funding.html
@@ -61,6 +61,9 @@
 </ul>
 <table class="imgtable"><tr><td>
 <img src="images/tshirt.png" alt="120" width="560px" />&nbsp;</td>
+<iframe width="468" height="312"
+src="https://www.youtube.com/shorts/8GCN7xQkaa0">
+</iframe>
 <td align="left">
 	<p>
 		<video width="468" height="312" controls>
