--- a/funding.html
+++ b/funding.html
@@ -60,17 +60,12 @@
 </li>
 </ul>
 <table class="imgtable"><tr><td>
-<img src="images/tshirt.png" alt="120" width="560px" />&nbsp;</td>
+<img src="images/tshirt.png" alt="120" width="560px" />&nbsp;
 <iframe width="468" height="312"
-src="https://www.youtube.com/shorts/8GCN7xQkaa0">
+src="https://www.youtube.com/embed/8GCN7xQkaa0">
 </iframe>
-<td align="left">
-	<p>
-		<video width="468" height="312" controls>
-			<source src="images/AdvTshirt.mp4" type=video/mp4>
-    </video>
-	</p>
-</td></tr></table>
+</td>
+</tr></table>
 <ul>
 <li><p><b>Second</b>, our ICLR’21 work [<a href="https://openreview.net/pdf?id=PH5PH9ZO_4">paper</a>, <a href="https://github.com/ALFA-group/adversarial-code-generation">code</a>, <a href="https://news.mit.edu/2021/toward-deep-learning-models-that-can-reason-about-code-like-humans-0415">MIT-News</a>] designed &lsquo;Adversarial Program’, a method for finding and fixing weaknesses in automated programming tools. We have found that code-processing models can be deceived simply by renaming a variable, inserting a bogus print statement, or introducing other cosmetic operations into programs the model tries to process. These subtly altered programs function normally, but dupe the model into processing them incorrectly, rendering the wrong decision.  We show that our best attack proposal achieves a 52% improvement over a state-of-the-art attack generation approach for programs trained on a SEQ2SEQ model. We also show that the proposed adversarial programs can be further exploited to train a program languaging model robust against prediction-evasion attacks.</p>
 </li>
