--- a/publications.html
+++ b/publications.html
@@ -33,7 +33,7 @@
 <ol>
 <li><p>A. Chen, Y. Yao, P.-Y. Chen, Y. Zhang, <b>S. Liu</b>, <a href="https://arxiv.org/abs/2211.11635">Understanding and Improving Visual Prompting: A Label-Mapping Perspective</a>, <i>CVPR&rsquo;23</i></p>
 </li>
-<li><p>Y. Zhang, X. Chen, J. Jia, <b>S. Liu</b>, K. Ding, <a href="https://openreview.net/forum?id=ximJfjVxda">Text-Visual Prompting for Efficient 2D Temporal Video Grounding</a>, <i>CVPR&rsquo;23</i></p>
+<li><p>Y. Zhang, X. Chen, J. Jia, <b>S. Liu</b>, K. Ding, <a href="https://openreview.net/attachment?id=ximJfjVxda&amp;name=camera-ready_PDF">Text-Visual Prompting for Efficient 2D Temporal Video Grounding</a>, <i>CVPR&rsquo;23</i></p>
 </li>
 <li><p>Y. Zhang, P. Sharma, P. Ram, M. Hong, K.R. Varshney, <b>S. Liu</b>, <a href="https://openreview.net/forum?id=MjsDeTcDEy">What Is Missing in IRM Training and Evaluation? Challenges and Solutions</a>, <i>ICLR&rsquo;23</i></p>
 </li>
