--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@ AAAI’20</p>
 </li>
 </ol>
 <h2>News</h2>
+<p>* Grateful to receive a grant from Lawrence Livermore National Laboratory.</p>
 <p>* Call for Papers and AdvML Rising Star Award Applications in the workshop <a href="https://advml-frontier.github.io/">AdvML-Frontiers</a>, ICML&rsquo;23</p>
 <p>* A new arXiv paper is released: Adversarial attacks can be parsed to reveal victim model information! <a href="https://arxiv.org/pdf/2303.07474.pdf">[Paper]</a></p>
 <p>* The 2nd Workshop on <a href="https://advml-frontier.github.io/">New Frontiers in Adversarial Machine Learning</a> has been accepted by <b>ICML&rsquo;23</b>.</p>
@@ -155,7 +156,7 @@ AAAI’20</p>
 <p>* Grateful to receive a <a href="https://beta.sam.gov/opp/f108cad02f824285af5ca85e1f7481f4/view">DARPA RED AIE Grant</a> as a Co-PI.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-04-01 13:12:33 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-04-13 16:30:18 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
