--- a/funding.html
+++ b/funding.html
@@ -119,9 +119,9 @@ src="https://www.youtube.com/embed/8GCN7xQkaa0">
 </li>
 </ol>
 <h1>Research Support</h1>
-<p>I am very grateful to receive the support from <a href="https://mitibmwatsonailab.mit.edu">MIT-IBM Watson AI Lab</a>, <a href="https://beta.sam.gov/opp/f108cad02f824285af5ca85e1f7481f4/view">DARPA</a>, <a href="https://research.cisco.com">Cisco Research</a>, <a href="https://www.nsf.gov">NSF</a>, and <a href="https://www.dso.org.sg/">DSO</a>.</p>
+<p>I am very grateful to receive the support from <a href="https://mitibmwatsonailab.mit.edu">MIT-IBM Watson AI Lab</a>, <a href="https://beta.sam.gov/opp/f108cad02f824285af5ca85e1f7481f4/view">DARPA</a>, <a href="https://research.cisco.com">Cisco Research</a>, <a href="https://www.nsf.gov">NSF</a>, <a href="https://www.dso.org.sg/">DSO</a>, and <a href="https://www.llnl.gov/">LLNL</a>.</p>
 <table class="imgtable"><tr><td>
-<img src="images/support_update.png" alt="90" width="525px" />&nbsp;</td>
+<img src="images/support_update.png" alt="135" width="775px" />&nbsp;</td>
 <td align="left"></td></tr></table>
 </td>
 </tr>
