--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@ AAAI’20</p>
 </li>
 </ol>
 <h2>News</h2>
+<p>* A new arXiv paper is released: Model Sparsification Can Simplify Machine Unlearning! <a href="https://arxiv.org/pdf/2304.04934.pdf">[Paper]</a> <a href="https://github.com/OPTML-Group/Unlearn-Sparse">[Code]</a></p>
 <p>* Grateful to receive a grant from Lawrence Livermore National Laboratory.</p>
 <p>* Call for Papers and AdvML Rising Star Award Applications in the workshop <a href="https://advml-frontier.github.io/">AdvML-Frontiers</a>, ICML&rsquo;23</p>
 <p>* A new arXiv paper is released: Adversarial attacks can be parsed to reveal victim model information! <a href="https://arxiv.org/pdf/2303.07474.pdf">[Paper]</a></p>
@@ -156,7 +157,7 @@ AAAI’20</p>
 <p>* Grateful to receive a <a href="https://beta.sam.gov/opp/f108cad02f824285af5ca85e1f7481f4/view">DARPA RED AIE Grant</a> as a Co-PI.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-04-13 16:30:18 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-04-17 15:59:52 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
