--- a/index.html
+++ b/index.html
@@ -67,6 +67,10 @@ I intend to seek a new learning frontier when the current learning algorithms be
 </li>
 </ul>
 <ol>
+<li><p><a href="https://arxiv.org/abs/2211.11635">Understanding and Improving Visual Prompting: A Label-Mapping Perspective</a> <br />
+A. Chen, Y. Yao, P.-Y. Chen, Y. Zhang, <b>S. Liu</b> <br />
+CVPR&rsquo;23</p>
+</li>
 <li><p><a href="https://arxiv.org/pdf/2112.12376.pdf">Revisiting and advancing fast adversarial training through the lens of bi-level optimization</a> <br /> 
 Y. Zhang*, G. Zhang*, P. Khanduri, M. Hong, S. Chang, <b>S. Liu</b> (* Equal contribution) <br /> 
 ICML’22</p>
@@ -78,10 +82,6 @@ ICLR’22</p>
 <li><p><a href="https://openreview.net/pdf?id=W9G_ImpHlQd">How to Robustify Black-Box ML Models? A Zeroth-Order Optimization Perspective</a><br />
 Y. Zhang, Y. Yao, J. Jia, J. Yi, M. Hong, S. Chang, <b>S. Liu</b><br />
 ICLR’22</p>
-</li>
-<li><p><a href="https://arxiv.org/pdf/2209.10222.pdf">Fairness reprogramming</a> <br />
-G. Zhang*, Y. Zhang*, Y. Zhang, W. Fan, Q. Li, <b>S. Liu</b>, S. Chang <br />
-NeurIPS&rsquo;22</p>
 </li>
 <li><p><a href="https://arxiv.org/pdf/2006.14748.pdf">Proper Network Interpretability Helps Adversarial Robustness in Classification</a> <br />
 A. Boopathy, <b>S. Liu</b>, G. Zhang, C. Liu, P.-Y. Chen, S. Chang, L. Daniel <br />
@@ -157,7 +157,7 @@ AAAI’20</p>
 <p>* Grateful to receive a <a href="https://beta.sam.gov/opp/f108cad02f824285af5ca85e1f7481f4/view">DARPA RED AIE Grant</a> as a Co-PI.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-04-17 15:59:52 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-04-19 21:34:30 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
