--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ AAAI’20</p>
 </li>
 </ol>
 <h2>News</h2>
-<p>* <i>Two</i> papers in <a href="https://icml.cc/">ICML&rsquo;23</a> and CFP for 2nd AdvML-Frontiers Workshop.</p>
+<p>* <i>Two</i> papers in <a href="https://icml.cc/">ICML&rsquo;23</a> and CFP for <a href="https://advml-frontier.github.io/">2nd AdvML-Frontiers Workshop</a>.</p>
 <p>* A new arXiv paper is released: Model Sparsification Can Simplify Machine Unlearning! <a href="https://arxiv.org/pdf/2304.04934.pdf">[Paper]</a> <a href="https://github.com/OPTML-Group/Unlearn-Sparse">[Code]</a></p>
 <p>* Grateful to receive a grant from Lawrence Livermore National Laboratory.</p>
 <p>* Call for Papers and AdvML Rising Star Award Applications in the workshop <a href="https://advml-frontier.github.io/">AdvML-Frontiers</a>, ICML&rsquo;23</p>
@@ -158,7 +158,7 @@ AAAI’20</p>
 <p>* Grateful to receive a <a href="https://beta.sam.gov/opp/f108cad02f824285af5ca85e1f7481f4/view">DARPA RED AIE Grant</a> as a Co-PI.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-04-24 19:58:28 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-04-24 20:38:59 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
