--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@ AAAI’20</p>
 </li>
 </ol>
 <h2>News</h2>
+<p>* Grateful to receive a CPS Medium Grant Award from NSF as a co-PI.</p>
 <p>* Slides of our CVPR&rsquo;23 tutorial on Reverse Engineering of Deceptions (RED) is now available at the tutorial page. <a href="https://sites.google.com/view/cvpr2023red">[link]</a></p>
 <p>* Our paper &ldquo;<a href="https://arxiv.org/pdf/2210.06284.pdf">Visual Prompting for Adversarial Robustness</a>&rdquo; received the <a href="https://drive.google.com/file/d/1PHjGXkCUSRJ3pQc4_8BGl_Y5aaRB-Nuw/view">Top 3% Paper Recognition</a> at ICASSP 2023. Congrats to Aochuan, Peter (internship at OPTML in 2022), Yuguang, and Pin-Yu (IBM Research)!</p>
 <p>* Grateful to be elected as Associate Editor of IEEE Transactions on Aerospace and Electronic Systems.</p>
@@ -161,7 +162,7 @@ AAAI’20</p>
 <p>* Grateful to receive a <a href="https://beta.sam.gov/opp/f108cad02f824285af5ca85e1f7481f4/view">DARPA RED AIE Grant</a> as a Co-PI.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-06-27 14:34:33 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-06-29 10:55:32 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
