--- a/publications.html
+++ b/publications.html
@@ -31,6 +31,8 @@
 <h2>Selected Conference Papers</h2>
 <p>* represents equal contribution</p>
 <ol>
+<li><p>Y. Zhang, R. Cai, T. Chen, G. Zhang, H. Zhang, P.-Y. Chen, S. Chang, Z. Wang, <b>S. Liu</b>, Robust Mixture-of-Expert Training for Convolutional Neural Networks, <i>ICCV’23</i></p>
+</li>
 <li><p>A. Chen, Y. Yao, P.-Y. Chen, Y. Zhang, <b>S. Liu</b>, <a href="https://arxiv.org/abs/2211.11635">Understanding and Improving Visual Prompting: A Label-Mapping Perspective</a>, <i>CVPR&rsquo;23</i></p>
 </li>
 <li><p>Y. Zhang, X. Chen, J. Jia, <b>S. Liu</b>, K. Ding, <a href="https://arxiv.org/abs/2303.04995">Text-Visual Prompting for Efficient 2D Temporal Video Grounding</a>, <i>CVPR&rsquo;23</i></p>
