--- a/index.html
+++ b/index.html
@@ -115,7 +115,8 @@ AAAI’20</p>
 </li>
 </ol>
 <h2>News</h2>
-<p>* <b>Call for participation in <a href="https://advml-frontier.github.io">2nd AdvML-Frontiers Workshop</a>@ICML&rsquo;23.</b></p>
+<p>* Grateful to receive a gift funding from Cisco Research as the PI.</p>
+<p>* Call for participation in <a href="https://advml-frontier.github.io">2nd AdvML-Frontiers Workshop</a>@ICML&rsquo;23.</p>
 <p>* One paper in <a href="https://iccv2023.thecvf.com">ICCV&rsquo;23</a> on Adversarial Robustness of Mixture-of-Experts.</p>
 <p>* Grateful to receive a CPS Medium Grant Award from NSF as a co-PI.</p>
 <p>* Slides of our CVPR&rsquo;23 tutorial on Reverse Engineering of Deceptions (RED) is now available at the tutorial page. <a href="https://sites.google.com/view/cvpr2023red">[link]</a></p>
@@ -164,7 +165,7 @@ AAAI’20</p>
 <p>* Grateful to receive a <a href="https://beta.sam.gov/opp/f108cad02f824285af5ca85e1f7481f4/view">DARPA RED AIE Grant</a> as a Co-PI.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-07-21 17:14:57 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-08-02 15:58:25 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
