--- a/publications.html
+++ b/publications.html
@@ -31,6 +31,8 @@
 <h2>Selected Conference Papers</h2>
 <p>* represents equal contribution</p>
 <ol>
+<li><p>Y. Zhang, R. Cai, T. Chen, G. Zhang, H. Zhang, P.-Y. Chen, S. Chang, Z. Wang, <b>S. Liu</b>, Robust Mixture-of-Expert Training for Convolutional Neural Networks, <i>ICCV&rsquo;23</i></p>
+</li>
 <li><p>P. Khanduri, I. Tsaknakis, Y. Zhang, J. Liu, <b>S. Liu</b>, J. Zhang, M. Hong, <a href="https://proceedings.mlr.press/v202/khanduri23a.html">Linearly Constrained Bilevel Optimization: A Smoothed Implicit Gradient Approach</a>, <i>ICML’23</i></p>
 </li>
 <li><p>M. Nowaz, R. Chowdhury, S. Zhang, M. Wang, <b>S. Liu</b>, P.-Y. Chen, <a href="https://arxiv.org/abs/2306.04073">Patch-level Routing in Mixture-of-Experts is Provably Sample-efficient for Convolutional Neural Networks</a>, <i>ICML’23</i></p>
