--- a/publications.html
+++ b/publications.html
@@ -37,7 +37,7 @@
 </li>
 <li><p>M. Nowaz, R. Chowdhury, S. Zhang, M. Wang, <b>S. Liu</b>, P.-Y. Chen, <a href="https://arxiv.org/abs/2306.04073">Patch-level Routing in Mixture-of-Experts is Provably Sample-efficient for Convolutional Neural Networks</a>, <i>ICML’23</i></p>
 </li>
-<li><p>Y. Zhang, R. Cai, T. Chen, G. Zhang, H. Zhang, P.-Y. Chen, S. Chang, Z. Wang, <b>S. Liu</b>, Robust Mixture-of-Expert Training for Convolutional Neural Networks, <i>ICCV’23</i></p>
+<li><p>Y. Zhang, R. Cai, T. Chen, G. Zhang, H. Zhang, P.-Y. Chen, S. Chang, Z. Wang, <b>S. Liu</b>, <a href="https://arxiv.org/abs/2308.10110v1">Robust Mixture-of-Expert Training for Convolutional Neural Networks</a>, <i>ICCV’23</i></p>
 </li>
 <li><p>A. Chen, Y. Yao, P.-Y. Chen, Y. Zhang, <b>S. Liu</b>, <a href="https://arxiv.org/abs/2211.11635">Understanding and Improving Visual Prompting: A Label-Mapping Perspective</a>, <i>CVPR&rsquo;23</i></p>
 </li>
