--- a/funding.html
+++ b/funding.html
@@ -60,12 +60,8 @@
 </li>
 </ul>
 <table class="imgtable"><tr><td>
-<img src="images/tshirt.png" alt="120" width="560px" />&nbsp;
-<iframe width="468" height="312"
-src="https://www.youtube.com/embed/8GCN7xQkaa0">
-</iframe>
-</td>
-</tr></table>
+<img src="images/tshirt.png" alt="120" width="560px" />&nbsp;</td>
+<td align="left"></td></tr></table>
 <ul>
 <li><p><b>Second</b>, our ICLR’21 work [<a href="https://openreview.net/pdf?id=PH5PH9ZO_4">paper</a>, <a href="https://github.com/ALFA-group/adversarial-code-generation">code</a>, <a href="https://news.mit.edu/2021/toward-deep-learning-models-that-can-reason-about-code-like-humans-0415">MIT-News</a>] designed &lsquo;Adversarial Program’, a method for finding and fixing weaknesses in automated programming tools. We have found that code-processing models can be deceived simply by renaming a variable, inserting a bogus print statement, or introducing other cosmetic operations into programs the model tries to process. These subtly altered programs function normally, but dupe the model into processing them incorrectly, rendering the wrong decision.  We show that our best attack proposal achieves a 52% improvement over a state-of-the-art attack generation approach for programs trained on a SEQ2SEQ model. We also show that the proposed adversarial programs can be further exploited to train a program languaging model robust against prediction-evasion attacks.</p>
 </li>
@@ -119,9 +115,9 @@ src="https://www.youtube.com/embed/8GCN7xQkaa0">
 </li>
 </ol>
 <h1>Research Support</h1>
-<p>I am very grateful to receive the support from <a href="https://mitibmwatsonailab.mit.edu">MIT-IBM Watson AI Lab</a>, <a href="https://beta.sam.gov/opp/f108cad02f824285af5ca85e1f7481f4/view">DARPA</a>, <a href="https://research.cisco.com">Cisco Research</a>, <a href="https://www.nsf.gov">NSF</a>, <a href="https://www.dso.org.sg/">DSO</a>, and <a href="https://www.llnl.gov/">LLNL</a>.</p>
+<p>I am very grateful to receive the support from <a href="https://mitibmwatsonailab.mit.edu">MIT-IBM Watson AI Lab</a>, <a href="https://beta.sam.gov/opp/f108cad02f824285af5ca85e1f7481f4/view">DARPA</a>, and <a href="https://research.cisco.com">Cisco Research</a>.</p>
 <table class="imgtable"><tr><td>
-<img src="images/support_update.png" alt="135" width="775px" />&nbsp;</td>
+<img src="images/support_update.png" alt="90" width="420px" />&nbsp;</td>
 <td align="left"></td></tr></table>
 </td>
 </tr>
