--- a/funding.html
+++ b/funding.html
@@ -52,6 +52,15 @@
 <li><p>Automated ML </p>
 </li>
 </ul>
+<h1>Research activities</h1>
+<ul>
+<li><p>Group meal @ CVPR&rsquo;24</p>
+</li>
+<li><p>AdvML Workshop</p>
+</li>
+<li><p>Group hiking @ ICML&rsquo;24</p>
+</li>
+</ul>
 <h1>Research highlights</h1>
 <h2>Adversarial Robustness of Deep Neural Networks</h2>
 <p><b>Description</b>: It has been widely known that deep neural networks (DNNs) are vulnerable to adversarial attacks that appear not only in the digital world but also in the physical world. <b>Along this direction, we highlight two of our achievements.</b></p>
@@ -115,9 +124,9 @@
 </li>
 </ol>
 <h1>Research Support</h1>
-<p>I am very grateful to receive the support from <a href="https://mitibmwatsonailab.mit.edu">MIT-IBM Watson AI Lab</a>, <a href="https://beta.sam.gov/opp/f108cad02f824285af5ca85e1f7481f4/view">DARPA</a>, and <a href="https://research.cisco.com">Cisco Research</a>.</p>
+<p>I am very grateful to receive the support from <a href="https://mitibmwatsonailab.mit.edu">MIT-IBM Watson AI Lab</a>, <a href="https://beta.sam.gov/opp/f108cad02f824285af5ca85e1f7481f4/view">DARPA</a>, and <a href="https://research.cisco.com">Cisco Research</a>, <a href="https://www.nsf.gov">NSF</a>, <a href="https://www.dso.org.sg">DSO</a>, <a href="https://www.llnl.gov">LLNL</a> and <a href="https://www.arl.army.mil/who-we-are/aro/">ARO</a>.</p>
 <table class="imgtable"><tr><td>
-<img src="images/support_update.png" alt="90" width="420px" />&nbsp;</td>
+<img src="images/support_update.png" alt="707" width="264px" />&nbsp;</td>
 <td align="left"></td></tr></table>
 </td>
 </tr>
