--- a/funding.html
+++ b/funding.html
@@ -56,6 +56,11 @@
 <ul>
 <li><p>Group meal @ CVPR&rsquo;24</p>
 </li>
+</ul>
+<table class="imgtable"><tr><td>
+<img src="images/cvpr_dinner.jpg" alt="1800" width="864px" />&nbsp;</td>
+<td align="left"></td></tr></table>
+<ul>
 <li><p>AdvML Workshop</p>
 </li>
 <li><p>Group hiking @ ICML&rsquo;24</p>
