--- a/talk.html
+++ b/talk.html
@@ -17,7 +17,7 @@
 <div class="menu-category">Research</div>
 <div class="menu-item"><a href="publications.html">Publications</a></div>
 <div class="menu-item"><a href="funding.html">Projects</a></div>
-<div class="menu-item"><a href="group.html">Group</a></div>
+<div class="menu-item"><a href="https://www.optml-group.com">OPTML&nbsp;Group</a></div>
 <div class="menu-category">Teaching</div>
 <div class="menu-item"><a href="CSE891.html">CSE891</a></div>
 <div class="menu-category">Others</div>
@@ -29,14 +29,20 @@
 </div>
 <h2>Tutorial talks </h2>
 <ul>
-<li><p><a href="https://sites.google.com/umich.edu/cvpr-2020-zoo" target=&ldquo;blank&rdquo;>Zeroth Order Optimization: Theory and Applications to Deep Learning</a>, <i>CVPR&rsquo;20</i></p>
+<li><p><a href="https://sites.google.com/view/cvpr2023red">Reverse Engineering of Deceptions: Foundations and Applications</a>, <i>CVPR&rsquo;23</i></p>
 </li>
-<li><p><a href="https://sites.google.com/view/adv-robustness-zoopt" target=&ldquo;blank&rdquo;>Recent Progress in Zeroth Order Optimization and Its Applications to Adversarial Robustness in Data Mining and Machine Learning</a>, <i>KDD&rsquo;19</i></p>
+<li><p><a href="https://sites.google.com/view/aaai2023tutorial/home">Bi-level Optimization in Machine Learning: Foundations and Applications</a>, <i>AAAI&rsquo;23</i></p>
+</li>
+<li><p><a href="https://sites.google.com/view/neurips2022-frfm-turotial/home">Foundational Robustness of Foundation Models</a>, <i>NeurIPS&rsquo;22</i></p>
+</li>
+<li><p><a href="https://sites.google.com/umich.edu/cvpr-2020-zoo">Zeroth Order Optimization: Theory and Applications to Deep Learning</a>, <i>CVPR&rsquo;20</i></p>
+</li>
+<li><p><a href="https://sites.google.com/view/adv-robustness-zoopt">Recent Progress in Zeroth Order Optimization and Its Applications to Adversarial Robustness in Data Mining and Machine Learning</a>, <i>KDD&rsquo;19</i></p>
 </li>
 </ul>
 <h2>Organized workshops </h2>
 <ul>
-<li><p><a href="https://sites.google.com/view/advml" target=&ldquo;blank&rdquo;>Adversarial Learning Methods for Machine Learning and Data Mining</a></p>
+<li><p><a href="https://sites.google.com/view/advml">Adversarial Learning Methods for Machine Learning and Data Mining</a></p>
 </li>
 </ul>
 </td>
