--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@ AAAI’20</p>
 </li>
 </ol>
 <h2>News</h2>
+<p>* Grateful to receive a grant from Army Research Office (ARO) as the PI.</p>
 <p>* Our paper on <a href="https://arxiv.org/abs/2308.10110v1">Adversarial Training for MoE</a> has been chosen for an Oral Presentation at <a href="https://iccv2023.thecvf.com">ICCV&rsquo;23</a>.</p>
 <p>* Grateful to receive a gift funding from Cisco Research as the PI.</p>
 <p>* Call for participation in <a href="https://advml-frontier.github.io">2nd AdvML-Frontiers Workshop</a>@ICML&rsquo;23.</p>
@@ -166,7 +167,7 @@ AAAI’20</p>
 <p>* Grateful to receive a <a href="https://beta.sam.gov/opp/f108cad02f824285af5ca85e1f7481f4/view">DARPA RED AIE Grant</a> as a Co-PI.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-08-23 09:45:23 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-09-02 11:50:32 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
