--- a/CSE891.html
+++ b/CSE891.html
@@ -13,11 +13,11 @@
 <td id="layout-menu">
 <div class="menu-category">Sijia</div>
 <div class="menu-item"><a href="index.html">Home</a></div>
-<div class="menu-item"><a href="links\CV_Sijia_Liu_2022_2Pages.pdf">CV(2&nbsp;pages)</a></div>
+<div class="menu-item"><a href="links\CV_Sijia_Liu_2023_2Pages.pdf">CV(2&nbsp;pages)</a></div>
 <div class="menu-category">Research</div>
 <div class="menu-item"><a href="publications.html">Publications</a></div>
 <div class="menu-item"><a href="funding.html">Projects</a></div>
-<div class="menu-item"><a href="group.html">Group</a></div>
+<div class="menu-item"><a href="https://www.optml-group.com">OPTML&nbsp;Group</a></div>
 <div class="menu-category">Teaching</div>
 <div class="menu-item"><a href="CSE891.html">CSE891</a></div>
 <div class="menu-category">Others</div>
