--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@ AAAI’20</p>
 </li>
 </ol>
 <h2>News</h2>
+<p>* NeurIPS 2023: 3 Papers Accepted – 1 Spotlight and 2 Posters. Congratulations to Jignhan, Jiancheng, and Yuguang for their spotlight acceptance with 'Model Sparsity Simplifies Machine Unlearning.&rsquo; And kudos to Yihua, Yimeng, Aochuan, Jinghan, and Jiancheng for their poster acceptance with 'Selectivity Boosts Transfer Learning Efficiency.&rsquo;</p>
 <p>* Grateful to receive a grant from Army Research Office (ARO) as the PI.</p>
 <p>* Our paper on <a href="https://arxiv.org/abs/2308.10110v1">Adversarial Training for MoE</a> has been chosen for an Oral Presentation at <a href="https://iccv2023.thecvf.com">ICCV&rsquo;23</a>.</p>
 <p>* Grateful to receive a gift funding from Cisco Research as the PI.</p>
@@ -167,7 +168,7 @@ AAAI’20</p>
 <p>* Grateful to receive a <a href="https://beta.sam.gov/opp/f108cad02f824285af5ca85e1f7481f4/view">DARPA RED AIE Grant</a> as a Co-PI.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-09-10 14:58:16 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-09-22 10:49:33 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
