--- a/publications.html
+++ b/publications.html
@@ -31,6 +31,12 @@
 <h2>Selected Conference Papers</h2>
 <p>* represents equal contribution</p>
 <ol>
+<li><p>J. Jia*, J. Liu*, P. Ram, Y. Yao, G. Liu, Y. Liu, P. Sharma, <b>S. Liu</b>, Model Sparsity Can Simplify Machine Unlearning, <i>NeurIPS&rsquo;23 (spotlight)</i></p>
+</li>
+<li><p>Y. Zhang*, Y. Zhang*, Aochuan Chen*, J. Jia, J. Liu, G. Liu, M. Hong, S. Chang, <b>S Liu</b>, Selectivity Drives Productivity: Efficient Dataset Pruning for Enhanced Transfer Learning, <i>NeurIPS&rsquo;23</i></p>
+</li>
+<li><p>S. Zhang, M. Wang, H. Li, M. Liu, P.-Y. Chen, S. Lu, <b>S. Liu</b>, K. Murugesan, S. Chaudhury, On the Convergence and Sample Complexity Analysis of Deep Q-Networks with Greedy Exploration, <i>NeurIPS&rsquo;23</i></p>
+</li>
 <li><p>Y. Zhang, R. Cai, T. Chen, G. Zhang, H. Zhang, P.-Y. Chen, S. Chang, Z. Wang, <b>S. Liu</b>, <a href="https://arxiv.org/abs/2308.10110v1">Robust Mixture-of-Expert Training for Convolutional Neural Networks</a>, <i>ICCV&rsquo;23</i></p>
 </li>
 <li><p>P. Khanduri, I. Tsaknakis, Y. Zhang, J. Liu, <b>S. Liu</b>, J. Zhang, M. Hong, <a href="https://proceedings.mlr.press/v202/khanduri23a.html">Linearly Constrained Bilevel Optimization: A Smoothed Implicit Gradient Approach</a>, <i>ICML’23</i></p>
