--- a/publications.html
+++ b/publications.html
@@ -33,7 +33,7 @@
 <ol>
 <li><p>J. Jia*, J. Liu*, P. Ram, Y. Yao, G. Liu, Y. Liu, P. Sharma, <b>S. Liu</b>, Model Sparsity Can Simplify Machine Unlearning, <i>NeurIPS&rsquo;23 (spotlight)</i></p>
 </li>
-<li><p>Y. Zhang*, Y. Zhang*, Aochuan Chen*, J. Jia, J. Liu, G. Liu, M. Hong, S. Chang, <b>S Liu</b>, Selectivity Drives Productivity: Efficient Dataset Pruning for Enhanced Transfer Learning, <i>NeurIPS&rsquo;23</i></p>
+<li><p>Y. Zhang*, Y. Zhang*, Aochuan Chen*, J. Jia, J. Liu, G. Liu, M. Hong, S. Chang, <b>S Liu</b>, <a href="https://arxiv.org/abs/2310.08782">Selectivity Drives Productivity: Efficient Dataset Pruning for Enhanced Transfer Learning</a>, <i>NeurIPS&rsquo;23</i></p>
 </li>
 <li><p>S. Zhang, M. Wang, H. Li, M. Liu, P.-Y. Chen, S. Lu, <b>S. Liu</b>, K. Murugesan, S. Chaudhury, On the Convergence and Sample Complexity Analysis of Deep Q-Networks with Greedy Exploration, <i>NeurIPS&rsquo;23</i></p>
 </li>
