--- a/publications.html
+++ b/publications.html
@@ -28,6 +28,12 @@
 <h1>Publications</h1>
 </div>
 <p>(Irregularly updated! See the <b>full publication</b> list at <a href="https://scholar.google.com/citations?user=C7dO_UgAAAAJ&amp;hl=en">Google scholar</a>)</p>
+<h2>Preprints</h2>
+<p>* represents equal contribution</p>
+<ol>
+<li><p>A. Chen*, <b> Y. Zhang* </b>, J. Jia, J. Diffenderfer, J. Liu, K. Parasyris, Y. Zhang, Z. Zhang, B. Kailkhura, S. Liu, <a href="https://browse.arxiv.org/abs/2310.02025">DeepZero: Scaling up Zeroth-Order Optimization for Deep Model Training</a></p>
+</li>
+</ol>
 <h2>Selected Conference Papers</h2>
 <p>* represents equal contribution</p>
 <ol>
